// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CrowdfundingCard /> CrowdfundingCard props matches with snapshot 1`] = `
.c1 {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  cursor: pointer;
  border: 0;
  padding: 0;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.8;
}

.c1.k-ButtonImage--tiny {
  width: 1.875rem;
  height: 1.875rem;
}

.c1.k-ButtonImage--huge {
  width: 5rem;
  height: 5rem;
}

.c1.k-ButtonImage--withoutPointerEvents {
  pointer-events: none;
}

.c1.k-ButtonImage--withBorder {
  border: 0.125rem solid #eee;
}

.c1 .k-ButtonImage__img {
  display: block;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c2 {
  max-width: 100%;
}

.c2 .k-Meters-Progress__ramp {
  position: relative;
  height: 0.125rem;
  background: #eee;
}

.c2 .k-Meters-Progress__ramp::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 0%;
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  background: #19b4fa;
}

.c2.k-Meters-Progress--disabled .k-Meters-Progress__ramp::after,
.c2.is-disabled .k-Meters-Progress__ramp::after {
  background: #d8d8d8;
}

.c2.k-Meters-Progress--orion .k-Meters-Progress__ramp,
.c2.k-Meters-Progress--orion .k-Meters-Progress__ramp::after {
  border-radius: 0.1875rem;
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
  overflow: hidden;
  display: block;
}

.c0[href]:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0 .k-CrowdfundingCard__paddedContainer {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__noWrap {
  white-space: nowrap;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  position: relative;
}

.c0 .k-CrowdfundingCard__image__imageContainer > .k-CrowdfundingCard__image__image {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  text-align: center;
}

.c0 .k-CrowdfundingCard__image__avatar {
  margin-left: 0.625rem;
  background-color: #d8d8d8;
}

.c0 .k-CrowdfundingCard__image__owner {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: none;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: #fff;
}

.c0 .k-CrowdfundingCard__title {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0;
  line-height: 1;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 0.8888888888888888rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  height: 1.5rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement:last-of-type {
  width: 70%;
  border-top: 0.0625rem solid #fff;
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: none;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText {
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText.k-CrowdfundingCard__subtitle__subtitleText--truncated {
  white-space: nowrap;
  overflow: hidden;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo > * {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .k-CrowdfundingCard__subtitle__horizontalStroke {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0.3125rem 0.625rem 0.3125rem 0;
}

.c0 .k-CrowdfundingCard__subtitle__loadingElement {
  display: block;
  background-color: #d8d8d8;
  width: 5rem;
  height: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 0.9375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 0.9375rem;
  margin-bottom: 0.3125rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__informations__info {
  font-size: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 2.5rem;
  height: 1rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement:last-of-type {
  width: 4.0625rem;
  border-top: 0.0625rem solid #fff;
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c0 .k-CrowdfundingCard__progressBar__progress {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c0 .k-CrowdfundingCard__loading {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background: linear-gradient( 90deg,rgba(0,0,0,0),rgba(255,255,255,0.3),rgba(0,0,0,0) );
  -webkit-animation: x 1s linear infinite;
  animation: x 1s linear infinite;
  -webkit-animation-name: linDdK;
  animation-name: linDdK;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  background-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__title {
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 4.375rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__subtitle__horizontalStroke {
  background-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__description {
  background-color: #d8d8d8;
  border-top: 0.0625rem solid #fff;
  width: 6.25rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__progressBar__loadingPercent {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 2.5rem;
  height: 1rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__cardButton__loadingButton {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 3.125rem;
}

.c0.k-CrowdfundingCard--isStretched {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0.k-CrowdfundingCard--isStretched .k-CrowdfundingCard__titleAndDesc {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 .k-CrowdfundingCard__state {
  position: absolute;
  top: 0;
  right: 0;
  display: none;
  background-color: #fff;
  padding: 0.625rem;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__widgetState {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: #222;
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  padding-top: calc( (0.625) * 100% );
}

@media (min-width:640px) {
  .c1.k-ButtonImage--big {
    width: 3.125rem;
    height: 3.125rem;
  }
}

@media (min-width:40rem) {
  .c0 .k-CrowdfundingCard__image__ownerContainer {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 .k-CrowdfundingCard__title {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__title__title {
    font-size: 1.265625rem;
  }

  .c0 .k-CrowdfundingCard__subtitle__container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    line-height: 1;
    padding: 0 0.625rem;
    margin-top: 0.625rem;
  }

  .c0 .k-CrowdfundingCard__additionalInfo {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations {
    margin-top: 1.25rem;
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer {
    margin-right: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
    margin-right: 0;
  }

  .c0 .k-CrowdfundingCard__progressBar {
    padding: 0 0.625rem;
    margin-bottom: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__progressBar__percent {
    display: inherit;
  }

  .c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
    min-height: 4.6875rem;
  }

  .c0 .k-CrowdfundingCard__state {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  className="c0 k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover k-CrowdfundingCard--titlesMinHeight k-CrowdfundingCard--isStretched"
  href={null}
  onClick={[Function]}
  title="Lorem ipsum…"
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={null}
    >
      <img
        alt=""
        className="k-Card__image k-CrowdfundingCard__image__image"
        src="#image"
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="c1 k-ButtonImage k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="#image"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner k-u-margin-top-single"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          Owner title
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          Owner description
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  <div
    className="k-CrowdfundingCard__informations"
  >
    <div
      className="k-CrowdfundingCard__informations__infoContainer"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-weight-light k-CrowdfundingCard__informations__info"
      >
        Lorem ipsum…
      </span>
    </div>
    <div
      className="k-CrowdfundingCard__informations__infoContainer"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-weight-light k-CrowdfundingCard__informations__info"
      >
        Lorem ipsum…
      </span>
    </div>
    <div
      className="k-CrowdfundingCard__informations__infoContainer"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-weight-light k-CrowdfundingCard__informations__info"
      >
        Lorem ipsum…
      </span>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__progressBar"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="c2 k-Meters-Progress k-CrowdfundingCard__progressBar__progress k-Meters-Progress--andromeda"
      role="progressbar"
    >
      <div
        className="k-Meters-Progress__ramp"
        style={
          Object {
            "height": "4px",
          }
        }
      />
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__progressBar__percent"
    >
      42 %
    </span>
  </div>
  <div
    className="k-CrowdfundingCard__state"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Lorem ipsum…
    </span>
  </div>
  
</div>
`;

exports[`<CrowdfundingCard /> CrowdfundingCard with buttonText prop matches with snapshot 1`] = `
.c1 {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  cursor: pointer;
  border: 0;
  padding: 0;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.8;
}

.c1.k-ButtonImage--tiny {
  width: 1.875rem;
  height: 1.875rem;
}

.c1.k-ButtonImage--huge {
  width: 5rem;
  height: 5rem;
}

.c1.k-ButtonImage--withoutPointerEvents {
  pointer-events: none;
}

.c1.k-ButtonImage--withBorder {
  border: 0.125rem solid #eee;
}

.c1 .k-ButtonImage__img {
  display: block;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c2 {
  max-width: 100%;
}

.c2 .k-Meters-Progress__ramp {
  position: relative;
  height: 0.125rem;
  background: #eee;
}

.c2 .k-Meters-Progress__ramp::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 0%;
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  background: #19b4fa;
}

.c2.k-Meters-Progress--disabled .k-Meters-Progress__ramp::after,
.c2.is-disabled .k-Meters-Progress__ramp::after {
  background: #d8d8d8;
}

.c2.k-Meters-Progress--orion .k-Meters-Progress__ramp,
.c2.k-Meters-Progress--orion .k-Meters-Progress__ramp::after {
  border-radius: 0.1875rem;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c3 >:last-child {
  margin-right: 0;
}

.c3.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c3.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c3.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c3.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c3.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c3.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c3.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c3.k-Button--rounded {
  border-radius: 50%;
}

.c3.k-Button--orion {
  border-radius: 0.375rem;
}

.c3 svg,
.c3 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c3:hover,
.c3:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c3:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c3:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c3:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
  overflow: hidden;
  display: block;
}

.c0[href]:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0 .k-CrowdfundingCard__paddedContainer {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__noWrap {
  white-space: nowrap;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  position: relative;
}

.c0 .k-CrowdfundingCard__image__imageContainer > .k-CrowdfundingCard__image__image {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  text-align: center;
}

.c0 .k-CrowdfundingCard__image__avatar {
  margin-left: 0.625rem;
  background-color: #d8d8d8;
}

.c0 .k-CrowdfundingCard__image__owner {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: none;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: #fff;
}

.c0 .k-CrowdfundingCard__title {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0;
  line-height: 1;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 0.8888888888888888rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  height: 1.5rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement:last-of-type {
  width: 70%;
  border-top: 0.0625rem solid #fff;
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: none;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText {
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText.k-CrowdfundingCard__subtitle__subtitleText--truncated {
  white-space: nowrap;
  overflow: hidden;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo > * {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .k-CrowdfundingCard__subtitle__horizontalStroke {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0.3125rem 0.625rem 0.3125rem 0;
}

.c0 .k-CrowdfundingCard__subtitle__loadingElement {
  display: block;
  background-color: #d8d8d8;
  width: 5rem;
  height: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 0.9375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 0.9375rem;
  margin-bottom: 0.3125rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__informations__info {
  font-size: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 2.5rem;
  height: 1rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement:last-of-type {
  width: 4.0625rem;
  border-top: 0.0625rem solid #fff;
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c0 .k-CrowdfundingCard__progressBar__progress {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c0 .k-CrowdfundingCard__loading {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background: linear-gradient( 90deg,rgba(0,0,0,0),rgba(255,255,255,0.3),rgba(0,0,0,0) );
  -webkit-animation: x 1s linear infinite;
  animation: x 1s linear infinite;
  -webkit-animation-name: linDdK;
  animation-name: linDdK;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  background-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__title {
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 4.375rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__subtitle__horizontalStroke {
  background-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__description {
  background-color: #d8d8d8;
  border-top: 0.0625rem solid #fff;
  width: 6.25rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__progressBar__loadingPercent {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 2.5rem;
  height: 1rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__cardButton__loadingButton {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 3.125rem;
}

.c0.k-CrowdfundingCard--isStretched {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0.k-CrowdfundingCard--isStretched .k-CrowdfundingCard__titleAndDesc {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 .k-CrowdfundingCard__state {
  position: absolute;
  top: 0;
  right: 0;
  display: none;
  background-color: #fff;
  padding: 0.625rem;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__widgetState {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: #222;
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  padding-top: calc( (0.625) * 100% );
}

@media (min-width:640px) {
  .c1.k-ButtonImage--big {
    width: 3.125rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c3.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c3.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--orion {
    border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 .k-CrowdfundingCard__image__ownerContainer {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 .k-CrowdfundingCard__title {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__title__title {
    font-size: 1.265625rem;
  }

  .c0 .k-CrowdfundingCard__subtitle__container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    line-height: 1;
    padding: 0 0.625rem;
    margin-top: 0.625rem;
  }

  .c0 .k-CrowdfundingCard__additionalInfo {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations {
    margin-top: 1.25rem;
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer {
    margin-right: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
    margin-right: 0;
  }

  .c0 .k-CrowdfundingCard__progressBar {
    padding: 0 0.625rem;
    margin-bottom: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__progressBar__percent {
    display: inherit;
  }

  .c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
    min-height: 4.6875rem;
  }

  .c0 .k-CrowdfundingCard__state {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  className="c0 k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover k-CrowdfundingCard--titlesMinHeight"
  href={null}
  onClick={[Function]}
  title="Lorem ipsum…"
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={null}
    >
      <img
        alt=""
        className="k-Card__image k-CrowdfundingCard__image__image"
        src="#image"
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="c1 k-ButtonImage k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="#image"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner k-u-margin-top-single"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          Owner title
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          Owner description
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  <div
    className="k-CrowdfundingCard__progressBar"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="c2 k-Meters-Progress k-CrowdfundingCard__progressBar__progress k-Meters-Progress--andromeda"
      role="progressbar"
    >
      <div
        className="k-Meters-Progress__ramp"
        style={
          Object {
            "height": "4px",
          }
        }
      />
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__progressBar__percent"
    >
      0 %
    </span>
  </div>
  <div
    className="k-CrowdfundingCard__cardButton k-CrowdfundingCard__paddedContainer"
  >
    <button
      className="c3 k-Button k-Button--normal k-Button--helium k-Button--andromeda k-Button--fluid"
      style={
        Object {
          "--border-radius": 0,
        }
      }
      type="button"
    >
      Contribute
    </button>
  </div>
  <div
    className="k-CrowdfundingCard__state"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Sur
    </span>
  </div>
  
</div>
`;

exports[`<CrowdfundingCard /> CrowdfundingCard with forceVersion prop matches with snapshot 1`] = `
.c1 {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  cursor: pointer;
  border: 0;
  padding: 0;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.8;
}

.c1.k-ButtonImage--tiny {
  width: 1.875rem;
  height: 1.875rem;
}

.c1.k-ButtonImage--huge {
  width: 5rem;
  height: 5rem;
}

.c1.k-ButtonImage--withoutPointerEvents {
  pointer-events: none;
}

.c1.k-ButtonImage--withBorder {
  border: 0.125rem solid #eee;
}

.c1 .k-ButtonImage__img {
  display: block;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c2 {
  max-width: 100%;
}

.c2 .k-Meters-Progress__ramp {
  position: relative;
  height: 0.125rem;
  background: #eee;
}

.c2 .k-Meters-Progress__ramp::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 0%;
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  background: #19b4fa;
}

.c2.k-Meters-Progress--disabled .k-Meters-Progress__ramp::after,
.c2.is-disabled .k-Meters-Progress__ramp::after {
  background: #d8d8d8;
}

.c2.k-Meters-Progress--orion .k-Meters-Progress__ramp,
.c2.k-Meters-Progress--orion .k-Meters-Progress__ramp::after {
  border-radius: 0.1875rem;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c3 >:last-child {
  margin-right: 0;
}

.c3.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c3.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c3.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c3.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c3.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c3.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c3.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c3.k-Button--rounded {
  border-radius: 50%;
}

.c3.k-Button--orion {
  border-radius: 0.375rem;
}

.c3 svg,
.c3 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c3:hover,
.c3:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c3:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c3:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c3:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
  overflow: hidden;
  display: block;
}

.c0[href]:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0 .k-CrowdfundingCard__paddedContainer {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__noWrap {
  white-space: nowrap;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  position: relative;
}

.c0 .k-CrowdfundingCard__image__imageContainer > .k-CrowdfundingCard__image__image {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  text-align: center;
}

.c0 .k-CrowdfundingCard__image__avatar {
  margin-left: 0.625rem;
  background-color: #d8d8d8;
}

.c0 .k-CrowdfundingCard__image__owner {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: none;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: #fff;
}

.c0 .k-CrowdfundingCard__title {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0;
  line-height: 1;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 0.8888888888888888rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  height: 1.5rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement:last-of-type {
  width: 70%;
  border-top: 0.0625rem solid #fff;
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: none;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText {
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText.k-CrowdfundingCard__subtitle__subtitleText--truncated {
  white-space: nowrap;
  overflow: hidden;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo > * {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .k-CrowdfundingCard__subtitle__horizontalStroke {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0.3125rem 0.625rem 0.3125rem 0;
}

.c0 .k-CrowdfundingCard__subtitle__loadingElement {
  display: block;
  background-color: #d8d8d8;
  width: 5rem;
  height: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 0.9375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 0.9375rem;
  margin-bottom: 0.3125rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__informations__info {
  font-size: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 2.5rem;
  height: 1rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement:last-of-type {
  width: 4.0625rem;
  border-top: 0.0625rem solid #fff;
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c0 .k-CrowdfundingCard__progressBar__progress {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c0 .k-CrowdfundingCard__loading {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background: linear-gradient( 90deg,rgba(0,0,0,0),rgba(255,255,255,0.3),rgba(0,0,0,0) );
  -webkit-animation: x 1s linear infinite;
  animation: x 1s linear infinite;
  -webkit-animation-name: linDdK;
  animation-name: linDdK;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  background-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__title {
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 4.375rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__subtitle__horizontalStroke {
  background-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__description {
  background-color: #d8d8d8;
  border-top: 0.0625rem solid #fff;
  width: 6.25rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__progressBar__loadingPercent {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 2.5rem;
  height: 1rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__cardButton__loadingButton {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 3.125rem;
}

.c0.k-CrowdfundingCard--isStretched {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0.k-CrowdfundingCard--isStretched .k-CrowdfundingCard__titleAndDesc {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 .k-CrowdfundingCard__state {
  position: absolute;
  top: 0;
  right: 0;
  display: none;
  background-color: #fff;
  padding: 0.625rem;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__widgetState {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: #222;
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .k-CrowdfundingCard__title {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 1.265625rem;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1;
  padding: 0 0.625rem;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 1.25rem;
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 1.25rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  padding: 0 0.625rem;
  margin-bottom: 1.25rem;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: inherit;
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 4.6875rem;
}

.c0 .k-CrowdfundingCard__state {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  padding-top: calc( (0.625) * 100% );
}

@media (min-width:640px) {
  .c1.k-ButtonImage--big {
    width: 3.125rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c3.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c3.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<div
  className="c0 k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover k-CrowdfundingCard--titlesMinHeight"
  href={null}
  onClick={[Function]}
  title="Lorem ipsum…"
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={null}
    >
      <img
        alt=""
        className="k-Card__image k-CrowdfundingCard__image__image"
        src="#image"
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="c1 k-ButtonImage k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="#image"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner k-u-margin-top-single"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          Owner title
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          Owner description
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  <div
    className="k-CrowdfundingCard__progressBar"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="c2 k-Meters-Progress k-CrowdfundingCard__progressBar__progress k-Meters-Progress--andromeda"
      role="progressbar"
    >
      <div
        className="k-Meters-Progress__ramp"
        style={
          Object {
            "height": "4px",
          }
        }
      />
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__progressBar__percent"
    >
      0 %
    </span>
  </div>
  <div
    className="k-CrowdfundingCard__cardButton k-CrowdfundingCard__paddedContainer"
  >
    <button
      className="c3 k-Button k-Button--normal k-Button--helium k-Button--andromeda k-Button--fluid"
      style={
        Object {
          "--border-radius": 0,
        }
      }
      type="button"
    >
      Contribute
    </button>
  </div>
  <div
    className="k-CrowdfundingCard__state"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Sur
    </span>
  </div>
  
</div>
`;

exports[`<CrowdfundingCard /> CrowdfundingCard with video props matches with snapshot 1`] = `
.c2 {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  cursor: pointer;
  border: 0;
  padding: 0;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c2:hover,
.c2:focus {
  opacity: 0.8;
}

.c2.k-ButtonImage--tiny {
  width: 1.875rem;
  height: 1.875rem;
}

.c2.k-ButtonImage--huge {
  width: 5rem;
  height: 5rem;
}

.c2.k-ButtonImage--withoutPointerEvents {
  pointer-events: none;
}

.c2.k-ButtonImage--withBorder {
  border: 0.125rem solid #eee;
}

.c2 .k-ButtonImage__img {
  display: block;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c1::-webkit-media-controls {
  display: none;
}

.c3 {
  max-width: 100%;
}

.c3 .k-Meters-Progress__ramp {
  position: relative;
  height: 0.125rem;
  background: #eee;
}

.c3 .k-Meters-Progress__ramp::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 0%;
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  background: #19b4fa;
}

.c3.k-Meters-Progress--disabled .k-Meters-Progress__ramp::after,
.c3.is-disabled .k-Meters-Progress__ramp::after {
  background: #d8d8d8;
}

.c3.k-Meters-Progress--orion .k-Meters-Progress__ramp,
.c3.k-Meters-Progress--orion .k-Meters-Progress__ramp::after {
  border-radius: 0.1875rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c4:disabled {
  cursor: not-allowed;
}

.c4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c4 >:last-child {
  margin-right: 0;
}

.c4.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c4.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c4.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c4.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c4.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c4.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c4.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c4.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c4.k-Button--rounded {
  border-radius: 50%;
}

.c4.k-Button--orion {
  border-radius: 0.375rem;
}

.c4 svg,
.c4 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c4:hover,
.c4:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c4:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c4:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c4:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
  overflow: hidden;
  display: block;
}

.c0[href]:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0 .k-CrowdfundingCard__paddedContainer {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__noWrap {
  white-space: nowrap;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  position: relative;
}

.c0 .k-CrowdfundingCard__image__imageContainer > .k-CrowdfundingCard__image__image {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  text-align: center;
}

.c0 .k-CrowdfundingCard__image__avatar {
  margin-left: 0.625rem;
  background-color: #d8d8d8;
}

.c0 .k-CrowdfundingCard__image__owner {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: none;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: #fff;
}

.c0 .k-CrowdfundingCard__title {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0;
  line-height: 1;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 0.8888888888888888rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  height: 1.5rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement:last-of-type {
  width: 70%;
  border-top: 0.0625rem solid #fff;
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: none;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText {
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText.k-CrowdfundingCard__subtitle__subtitleText--truncated {
  white-space: nowrap;
  overflow: hidden;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo > * {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .k-CrowdfundingCard__subtitle__horizontalStroke {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0.3125rem 0.625rem 0.3125rem 0;
}

.c0 .k-CrowdfundingCard__subtitle__loadingElement {
  display: block;
  background-color: #d8d8d8;
  width: 5rem;
  height: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 0.9375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 0.9375rem;
  margin-bottom: 0.3125rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__informations__info {
  font-size: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 2.5rem;
  height: 1rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement:last-of-type {
  width: 4.0625rem;
  border-top: 0.0625rem solid #fff;
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c0 .k-CrowdfundingCard__progressBar__progress {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c0 .k-CrowdfundingCard__loading {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background: linear-gradient( 90deg,rgba(0,0,0,0),rgba(255,255,255,0.3),rgba(0,0,0,0) );
  -webkit-animation: x 1s linear infinite;
  animation: x 1s linear infinite;
  -webkit-animation-name: linDdK;
  animation-name: linDdK;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  background-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__title {
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 4.375rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__subtitle__horizontalStroke {
  background-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__description {
  background-color: #d8d8d8;
  border-top: 0.0625rem solid #fff;
  width: 6.25rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__progressBar__loadingPercent {
  display: block;
  background-color: #d8d8d8;
  border-bottom: 0.0625rem solid #fff;
  width: 2.5rem;
  height: 1rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__cardButton__loadingButton {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 3.125rem;
}

.c0.k-CrowdfundingCard--isStretched {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0.k-CrowdfundingCard--isStretched .k-CrowdfundingCard__titleAndDesc {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 .k-CrowdfundingCard__state {
  position: absolute;
  top: 0;
  right: 0;
  display: none;
  background-color: #fff;
  padding: 0.625rem;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__widgetState {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: #222;
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  padding-top: calc( (0.625) * 100% );
}

@media (min-width:640px) {
  .c2.k-ButtonImage--big {
    width: 3.125rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c4.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c4.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c4.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Button--orion {
    border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 .k-CrowdfundingCard__image__ownerContainer {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 .k-CrowdfundingCard__title {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__title__title {
    font-size: 1.265625rem;
  }

  .c0 .k-CrowdfundingCard__subtitle__container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    line-height: 1;
    padding: 0 0.625rem;
    margin-top: 0.625rem;
  }

  .c0 .k-CrowdfundingCard__additionalInfo {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations {
    margin-top: 1.25rem;
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer {
    margin-right: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
    margin-right: 0;
  }

  .c0 .k-CrowdfundingCard__progressBar {
    padding: 0 0.625rem;
    margin-bottom: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__progressBar__percent {
    display: inherit;
  }

  .c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
    min-height: 4.6875rem;
  }

  .c0 .k-CrowdfundingCard__state {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  className="c0 k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover k-CrowdfundingCard--titlesMinHeight"
  href={null}
  onClick={[Function]}
  title="Lorem ipsum…"
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={null}
    >
      <video
        autoPlay={true}
        className="c1 k-Card__image k-CrowdfundingCard__image__image testClass"
        loop={false}
        muted={false}
        playsInline={true}
        poster={null}
      >
        <source
          src="#videoFile.mp4"
          type="video/mp4"
        />
        <source
          src="#videoFile.webm"
          type="video/webm"
        />
      </video>
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="c2 k-ButtonImage k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="#image"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner k-u-margin-top-single"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          Owner title
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          Owner description
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  <div
    className="k-CrowdfundingCard__progressBar"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="c3 k-Meters-Progress k-CrowdfundingCard__progressBar__progress k-Meters-Progress--andromeda"
      role="progressbar"
    >
      <div
        className="k-Meters-Progress__ramp"
        style={
          Object {
            "height": "4px",
          }
        }
      />
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__progressBar__percent"
    >
      0 %
    </span>
  </div>
  <div
    className="k-CrowdfundingCard__cardButton k-CrowdfundingCard__paddedContainer"
  >
    <button
      className="c4 k-Button k-Button--normal k-Button--helium k-Button--andromeda k-Button--fluid"
      style={
        Object {
          "--border-radius": 0,
        }
      }
      type="button"
    >
      Lorem ipsum
    </button>
  </div>
  <div
    className="k-CrowdfundingCard__state"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Sur
    </span>
  </div>
  
</div>
`;
